--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+        </dependency>
         <!-- 添加 MyBatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
